--- a/src/components/Fondos/Fondos.css
+++ b/src/components/Fondos/Fondos.css
@@ -1,10 +1,11 @@
 .Fondos{
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     position: absolute;
-    
+    min-width: 22.5rem;
 }
 .Fondo-inicio{
+    display: none;
     width: 100%;
     height: 100vh;
     opacity: 0;
@@ -22,6 +23,7 @@
     height: 100vh;
 }
 .Fondo-contacto{
+    display: none;
     width: 100%;
     height: 100vh;
     background-image: linear-gradient(to left top, #8949ff , #ff56e8);
@@ -32,8 +34,9 @@
     left: 0;
 }
 .Fondo-trabajos{
+    display: none;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     background-image: linear-gradient(to left top , #160096 , #5d01c070);
     opacity: 0;
     transition: all 1s ease;
@@ -43,4 +46,13 @@
 }
 .isActive{
     opacity: 1;
+    display:block;
+}
+@media (max-width: 1023px){
+
+}
+@media (max-width:767px) {
+    .Fondo-trabajos{
+        background: none;
+    }
 }
