--- a/src/pages/Trabajos/Trabajos.css
+++ b/src/pages/Trabajos/Trabajos.css
@@ -1,7 +1,8 @@
 .Trabajos{
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     color: #fff;
+    min-width: 22.5rem;
 }
 .Trabajos-wrapper{
     height: 100%;
@@ -10,17 +11,15 @@
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    padding: -2em 0 0;
+    padding: 3em 0;
     position: relative;
 }
 .Trabajos-h2{
-    position: absolute;
-    top: 0;
-    left: 1em;
+    padding-bottom: 2rem;
 
     font-weight: 300;
     letter-spacing: .2em;
-    line-height: 1.8em;
+    line-height: 1.5em;
     color: #000111;
     font-size: 8em;
 
@@ -94,14 +93,26 @@
         transform: translateY(0);
     }
 }
-@media (max-width:500px) {
+@media (max-width: 1023px){
+    .Trabajos-h3{
+        font-size: 2rem;
+    }
+}
+@media (max-width:767px) {
+    .Trabajos-wrapper{
+        padding: 2rem 0 6rem 0;
+        background-image: linear-gradient(to left top , #160096 , #5d01c070);
+        min-height: 100vh;
+    }
     .Trabajos-h2{
-        top: 0px;
-        left: 0px;
-        right:300px;
-        font-size: 8em;
+        font-size: 3rem;
+        padding-bottom: 2rem;
         animation: none;
+        font-weight: 400;
         opacity: .2;
-        transform: rotate(90deg);
+    }
+    .Trabajos-h3{
+        font-size: 1.5rem;
+        opacity: .8;
     }
 }
