--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ body{
 .Header-nav{
     padding: 1em 3em;
     width: 90%;
-    background-image: linear-gradient(to left, #2b2b2b , #000000);
+    background-image: linear-gradient(to left, #2b2b2b , #202020);
     box-shadow: 0px 0px 10px 0px#000000;
     margin: 0 auto;
 }
@@ -22,25 +22,33 @@ body{
     flex-flow: row nowrap;
     justify-content: center;
     align-items: center;
+    gap:10rem;
 }
 .Header-li{
     color: rgb(131, 36, 220);
-    font-weight: 500;
+    font-weight: 600;
     text-transform: uppercase;
     letter-spacing: 3px;
-    font-size: .8em;
+    font-size: .9em;
 }
-.Header-li:nth-child(2){
-    margin: 0em 5em ;
+.Header-li:hover{
+    color: rgb(32, 17, 253);
+}
+@media (max-width:1024px){
+    .Header-ul{
+        justify-content: space-around;
+        gap:2rem;
+    }
 }
 @media (max-width:767px){
+    .Header-ul{
+        gap:1rem;
+    }
     .Header-nav{
         padding: 1em;
     }
-    .Header-ul{
-        justify-content: space-around;
-    }
-    .Header-li:nth-child(2){
-        margin: 0em;
+    .Header-li{
+        font-weight: 700;
+        font-size: .8em;
     }
 }
