--- a/src/App.css
+++ b/src/App.css
@@ -7,15 +7,16 @@ body{
 .Header{
     width: 100%;
     position: fixed;
-    bottom: 20px;
+    top: 32px;
     z-index: 1;
 }
 .Header-nav{
     padding: 1em 3em;
-    width: 90%;
-    background-image: linear-gradient(to left, #2b2b2b , #202020);
-    box-shadow: 0px 0px 10px 0px#000000;
+    width: 50%;
+    background-image: linear-gradient(to left, #2b2b2b33 , #20202033);
+    box-shadow: 0px 0px 10px 0px#1a1a1abb;
     margin: 0 auto;
+    border-radius: 50px;
 }
 .Header-ul{
     display: flex;
@@ -25,7 +26,7 @@ body{
     gap:10rem;
 }
 .Header-li{
-    color: rgb(131, 36, 220);
+    color: #2b2b2b;
     font-weight: 600;
     text-transform: uppercase;
     letter-spacing: 3px;
@@ -42,10 +43,11 @@ body{
 }
 @media (max-width:767px){
     .Header-ul{
-        gap:1rem;
+        gap:0.5rem;
     }
     .Header-nav{
         padding: 1em;
+        width: 90%;
     }
     .Header-li{
         font-weight: 700;
