--- a/src/pages/Trabajos/Trabajos.css
+++ b/src/pages/Trabajos/Trabajos.css
@@ -5,16 +5,17 @@
     min-width: 22.5rem;
 }
 .Trabajos-wrapper{
-    height: 100%;
+    min-height: 100vh;
     display: flex;
     flex-flow: column nowrap;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
     overflow: hidden;
     padding: 3em 0;
     position: relative;
 }
 .Trabajos-h2{
+    display: none;
     padding-bottom: 2rem;
 
     font-weight: 300;
@@ -32,7 +33,7 @@
     width: 100%;
     display: flex;
     flex-flow: column nowrap;
-    gap: 2rem;
+    gap: 8rem;
     padding: 0 3rem;
 }
 .Trabajos-Tabs-wrapper{
@@ -43,15 +44,20 @@
     gap: 2rem;
 }
 .Button-tabs{
-    padding: 1rem;
-    background-color: #000;
+    padding: 1rem 2rem;
+    border: 2px solid #2b2b2b;
+    background-color: none;
     cursor: pointer;
+    color: #2b2b2b;
+    border-radius: 48px;
 }
 .Button-tabs:hover{
-    background-color: #0026ff;
+    background-color: #2b2b2b;
+    color: #fff;
 }
 .tab-isActive{
-    background-color: #0026ff;
+    background-color: #2b2b2b;
+    color: #fff;
 }
 .Tabs-content{
     min-height: 4rem;
@@ -86,21 +92,22 @@
     animation-delay: 1.5s;
 }
 .Trabajos-img{
-    background-color: aquamarine;
     opacity: .7;
     filter: grayscale(100%);
     transition: all .5s ease;
+    border-radius: 8px;
 }
 .Trabajos-h3{
     display: block;
-    color: #fff;
+    /* color: #fff; */
     font-size: 2em;
     font-weight: 800;
     opacity: .1;
-    position: absolute;
+    /* position: absolute;
     bottom: 20px;
-    right: 20px;
-    text-shadow: 0px 0px 5px #000;
+    right: 20px; */
+    margin-top: 20px;
+    text-shadow: 0px 0px 5px #00000088;
     transition: all .5s ease;
 }
 .Trabajos-article:hover .Trabajos-img,
@@ -136,7 +143,8 @@
 }
 @media (max-width:767px) {
     .Trabajos-wrapper{
-        padding: 2rem 0 6rem 0;
+        justify-content: flex-start;
+        padding: 8rem 0 2rem 0;
         background-image: linear-gradient(to left top , #160096 , #5d01c070);
         min-height: 100vh;
     }
