--- a/src/pages/Trabajos/Trabajos.css
+++ b/src/pages/Trabajos/Trabajos.css
@@ -8,79 +8,74 @@
     min-height: 100vh;
     display: flex;
     flex-flow: column nowrap;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
     overflow: hidden;
     padding: 3em 0;
     position: relative;
 }
-.Trabajos-h2{
-    display: none;
-    padding-bottom: 2rem;
-
-    font-weight: 300;
-    letter-spacing: .2em;
-    line-height: 1.5em;
-    color: #000111;
-    font-size: 8em;
-
-    opacity: .5;
-    animation: aparecerArriba .5s ease ;
-    animation-delay: 0s;
-    animation-fill-mode: forwards;
-}
 .Tabs-container{
     width: 100%;
     display: flex;
-    flex-flow: column nowrap;
-    gap: 8rem;
+    flex-flow: row nowrap;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 6rem;
     padding: 0 3rem;
 }
 .Trabajos-Tabs-wrapper{
     display: flex;
-    flex-flow: row nowrap;
+    flex-flow: column nowrap;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     gap: 2rem;
+
+}
+.Tabs-wrapper{
+    width: 100%;
 }
 .Button-tabs{
-    padding: 1rem 2rem;
+    width: 150px;
+    padding: 0.5rem 1rem;
     border: 2px solid #2b2b2b;
     background-color: none;
     cursor: pointer;
     color: #2b2b2b;
+    font-weight: 600;
     border-radius: 48px;
+    transition: all .5s ease;
+    opacity: .5;
 }
 .Button-tabs:hover{
     background-color: #2b2b2b;
     color: #fff;
+    opacity: 1;
 }
 .tab-isActive{
     background-color: #2b2b2b;
     color: #fff;
+    opacity: 1;
 }
 .Tabs-content{
-    min-height: 4rem;
     display: none;
     flex-flow: row wrap;
     justify-content: center;
     align-items: center;
-
 }
 .content-isActive{
     display: flex;
 }
 .Trabajos-grid{
-    width: 85%;
+    width: 100%;
     display: grid;
-    grid-template-columns: repeat(auto-fit , minmax(250px , 1fr));
+    grid-template-columns: repeat(auto-fit , minmax(280px , 1fr));
     gap: 3em;
 }
 .Trabajos-article{
+    max-width: 360px;
     position: relative;
     opacity: 0;
     transition: all .5s ease;
-    cursor: pointer;
     animation: aparecer .5s ease ;
     animation-delay: .5s;
     animation-fill-mode: forwards;
@@ -97,23 +92,38 @@
     transition: all .5s ease;
     border-radius: 8px;
 }
+.Trabajos-info{
+    margin-top: 1.25rem;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 1rem;
+}
 .Trabajos-h3{
     display: block;
-    /* color: #fff; */
-    font-size: 2em;
-    font-weight: 800;
-    opacity: .1;
-    /* position: absolute;
-    bottom: 20px;
-    right: 20px; */
-    margin-top: 20px;
+    letter-spacing: 1px;
+    font-size: 1.6rem;
+    font-weight: 600;
+    opacity: .4;
     text-shadow: 0px 0px 5px #00000088;
     transition: all .5s ease;
 }
+
+.Trabajos-rrss{
+    display: flex;
+    flex-flow: row nowrap;
+    gap: 1rem;
+    transition: all .5s ease;
+    opacity: .4;
+}
+
+
 .Trabajos-article:hover .Trabajos-img,
-.Trabajos-article:hover .Trabajos-h3{
+.Trabajos-article:hover .Trabajos-h3,
+.Trabajos-article:hover .Trabajos-rrss{
     filter: grayscale(0%);
-    opacity: .9;
+    opacity: 1;
 }
 
 @keyframes aparecer {
@@ -142,21 +152,33 @@
     }
 }
 @media (max-width:767px) {
+    .Tabs-container{
+        flex-flow: column;
+        align-items: center;
+        gap: 2rem;
+        padding: 1rem;
+    }
     .Trabajos-wrapper{
         justify-content: flex-start;
-        padding: 8rem 0 2rem 0;
+        padding: 2rem 0 6rem;
         background-image: linear-gradient(to left top , #160096 , #5d01c070);
         min-height: 100vh;
     }
-    .Trabajos-h2{
-        font-size: 3rem;
-        padding-bottom: 2rem;
-        animation: none;
-        font-weight: 400;
-        opacity: .2;
+    .Trabajos-Tabs-wrapper{
+        flex-flow: row;
+        justify-content: center;
+        gap: 0.5rem;
+    }
+    .Button-tabs{
+        width: auto;
+        font-size: .9rem;
     }
     .Trabajos-h3{
         font-size: 1.5rem;
         opacity: .8;
     }
+    .Trabajos-rrss .Redes-icon{
+        margin-bottom: 0;
+    }
+
 }
