--- a/src/components/Fondos/Fondos.css
+++ b/src/components/Fondos/Fondos.css
@@ -5,7 +5,7 @@
     min-width: 22.5rem;
 }
 .Fondo-inicio{
-    display: none;
+    visibility: hidden;
     width: 100%;
     height: 100vh;
     opacity: 0;
@@ -23,10 +23,10 @@
     height: 100vh;
 }
 .Fondo-contacto{
-    display: none;
+    visibility: hidden;
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(to left top, #8949ff , #ff56e8);
+    background-image: linear-gradient(to left top, #120b3c , #8949ff );
     opacity: 0;
     transition: all 1s ease;
     position: absolute;
@@ -34,10 +34,10 @@
     left: 0;
 }
 .Fondo-trabajos{
-    display: none;
+    visibility: hidden;
     width: 100%;
     min-height: 100vh;
-    background-image: linear-gradient(to left top , #160096 , #5d01c070);
+    background-image: linear-gradient(to left top , #120b3c , #8949ff);
     opacity: 0;
     transition: all 1s ease;
     position: absolute;
@@ -46,7 +46,7 @@
 }
 .isActive{
     opacity: 1;
-    display:block;
+    visibility: visible;
 }
 @media (max-width:767px) {
     .Fondo-trabajos{
