--- a/src/App.css
+++ b/src/App.css
@@ -59,7 +59,7 @@ body{
         width: 100%;
         position: fixed;
         padding: 0 ;
-        top: 90%;
+        top: 1rem;
     }
     .Header-nav{
         width: 90%;
