--- a/src/pages/Trabajos/Trabajos.css
+++ b/src/pages/Trabajos/Trabajos.css
@@ -156,7 +156,7 @@
         flex-flow: column;
         align-items: center;
         gap: 2rem;
-        padding: 1rem;
+        padding: 6rem 1rem 1rem;
     }
     .Trabajos-wrapper{
         justify-content: flex-start;
