--- a/src/pages/Contacto/Contacto.css
+++ b/src/pages/Contacto/Contacto.css
@@ -9,13 +9,12 @@
     min-width: 22.5rem;
 }
 .Contacto-wrapper{
-    height: 100%;
+    min-height: 100vh;
     display: flex;
     flex-flow: row nowrap;
     justify-content: center;
     align-items: center;
     position: relative;
-    
 }
 .Perfil-wrapper{
     display: flex;
@@ -109,10 +108,6 @@
     }
 }
 @media (max-width: 1023px){
-    .Contacto-h2{
-        padding-top: 2rem;
-        font-size: 2rem;
-    }
     .Perfil-wrapper{
         margin: 0.5rem 0;
         display: flex;
@@ -145,6 +140,10 @@
     }
 }
 @media (max-width:767px){
+    .Contacto-wrapper{
+        align-items: flex-start;
+        padding-top: 8rem;
+    }
     .Redes-a p{
         display: none;
     }
