--- a/src/App.css
+++ b/src/App.css
@@ -53,6 +53,11 @@ body{
         justify-content: space-around;
         gap:2rem;
     }
+    .Header-nav{
+        width: 90%;
+        border-radius: 50px;
+        min-height: 0;
+    }
 }
 @media (max-width:767px){
     .Header{
