--- a/src/components/Fondos/Fondos.css
+++ b/src/components/Fondos/Fondos.css
@@ -7,7 +7,7 @@
 .Fondo-inicio{
     visibility: hidden;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     opacity: 0;
     position: absolute;
     transition: all 1s ease;
@@ -25,7 +25,7 @@
 .Fondo-contacto{
     visibility: hidden;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     background-image: linear-gradient(to left top, #120b3c , #8949ff );
     opacity: 0;
     transition: all 1s ease;
@@ -50,6 +50,9 @@
 }
 @media (max-width:767px) {
     .Fondo-trabajos{
+        background: none;
+    }
+    .Fondo-contacto{
         background: none;
     }
 }
