--- a/src/pages/Inicio/Inicio.css
+++ b/src/pages/Inicio/Inicio.css
@@ -19,7 +19,7 @@
     text-align: center;
 }
 .Inicio-h1{
-    color: #9300e9;
+    color: #b027ff;
     font-size: 18em;
     line-height: .9em;
     opacity: .8;
