--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@ body{
     min-height: 100vh;
     font-family: 'Jost', sans-serif;
     min-width: 22.5rem;
+    background-color: #1a1a1a;
 }
 .Header{
     width: 100%;
@@ -16,11 +17,13 @@ body{
     align-items: center;
 }
 .Header-nav{
+    min-width: 360px;
     width: 40%;
     min-height: 48px;
-    box-shadow: 0px 0px 8px 0px#1a1a1a44;
+    box-shadow: 0px 0px 8px 0px#1a1a1a33;
     border-radius: 50px;
-    
+    background-color: #1a1a1a66;
+    backdrop-filter: blur(10px);
 }
 .Header-ul{
     display: flex;
@@ -30,7 +33,7 @@ body{
     
 }
 .Header-li{
-    color: #2b2b2b;
+    color: #b027ff;
     font-weight: 600;
     letter-spacing: 2px;
     font-size: .9em;
@@ -41,7 +44,7 @@ body{
     justify-content: center;
 }
 .Header-li:hover{
-    color: #a3a3a3;
+    color: #f1f1f1;
 }
 .Header-svg{
     margin: .5rem 0 ;
@@ -79,7 +82,6 @@ body{
         gap: 0;
     }
     .Header-li{
-        color: #2b2b2b;
         font-weight: 600;
         letter-spacing: 2px;
         font-size: .9em;
