--- a/src/pages/Contacto/Contacto.css
+++ b/src/pages/Contacto/Contacto.css
@@ -30,7 +30,7 @@
     border-radius: 16px;
 }
 .Info-wrapper{
-    padding: 2em;
+    padding: 2rem;
     background-color: #ffffff88;
     width: 30%;
     border-radius: 16px;
