--- a/src/pages/Trabajos/Trabajos.css
+++ b/src/pages/Trabajos/Trabajos.css
@@ -37,22 +37,22 @@
 .Button-tabs{
     width: 150px;
     padding: 0.5rem 1rem;
-    border: 2px solid #2b2b2b;
+    border: 2px solid #1a1a1a;
     background-color: none;
     cursor: pointer;
-    color: #2b2b2b;
+    color: #1a1a1a;
     font-weight: 600;
-    border-radius: 48px;
+    border-radius: 12px;
     transition: all .5s ease;
     opacity: .5;
 }
 .Button-tabs:hover{
-    background-color: #2b2b2b;
+    background-color: #1a1a1a;
     color: #fff;
     opacity: 1;
 }
 .tab-isActive{
-    background-color: #2b2b2b;
+    background-color: #1a1a1a;
     color: #fff;
     opacity: 1;
 }
@@ -68,12 +68,15 @@
 .Trabajos-grid{
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(auto-fit , minmax(280px , 1fr));
+    grid-template-columns: repeat(auto-fit , minmax(300px , 1fr));
     gap: 3em;
     justify-content: center;
 }
 .Trabajos-article{
     max-width: 360px;
+    padding: 1rem;
+    background-color: #1a1a1add;
+    border-radius: 1.5rem;
     opacity: 0;
     transition: all .5s ease;
     animation: aparecer .5s ease ;
@@ -84,7 +87,7 @@
     opacity: .7;
     filter: grayscale(100%);
     transition: all .5s ease;
-    border-radius: 8px;
+    border-radius: 16px;
     object-fit: cover;
 }
 .Trabajos-info{
@@ -93,15 +96,14 @@
     flex-flow: row nowrap;
     justify-content: space-between;
     align-items: center;
-    padding: 0 1rem;
+    padding: .5rem 0;
 }
 .Trabajos-h3{
     display: block;
     letter-spacing: 1px;
     font-size: 1.6rem;
-    font-weight: 600;
+    font-weight: 400;
     opacity: .4;
-    text-shadow: 0px 0px 5px #00000088;
     transition: all .5s ease;
 }
 
@@ -112,7 +114,9 @@
     transition: all .5s ease;
     opacity: .4;
 }
-
+.Trabajos-article:hover{
+    box-shadow: 0px 0px 12px #1a1a1a55;
+}
 
 .Trabajos-article:hover .Trabajos-img,
 .Trabajos-article:hover .Trabajos-h3,
@@ -147,11 +151,17 @@
     }
     .Trabajos-Tabs-wrapper{
         flex-flow: row;
+        width: 100%;
         justify-content: center;
-        gap: 0.5rem;
+        gap: 2rem;
     }
 }
 @media (max-width:767px) {
+    .Trabajos-Tabs-wrapper{
+        width: 100%;
+        justify-content: space-between;
+        gap: .5rem;
+    }
     .Trabajos-grid{
         width: auto;
     }
