--- a/src/pages/BeatScene/BeatScene.css
+++ b/src/pages/BeatScene/BeatScene.css
@@ -83,7 +83,7 @@
     display: flex;
     flex-flow: column;
     justify-content: space-between;
-    height: 280px;
+    aspect-ratio: 1/1;
     border-radius: 16px;
     padding: 2rem;
     position: relative;
