--- a/src/components/Fondos/Fondos.css
+++ b/src/components/Fondos/Fondos.css
@@ -26,7 +26,7 @@
     visibility: hidden;
     width: 100%;
     min-height: 100vh;
-    background-image: linear-gradient(to left top, #120b3c , #8949ff );
+    background-image: linear-gradient(to left top , #2d2035 , #160d49 );
     opacity: 0;
     transition: all 1s ease;
     position: absolute;
@@ -37,7 +37,7 @@
     visibility: hidden;
     width: 100%;
     min-height: 100vh;
-    background-image: linear-gradient(to left top , #120b3c , #8949ff);
+    background-image: linear-gradient(to left top , #2b2b2b , #160d49);
     opacity: 0;
     transition: all 1s ease;
     position: absolute;
