--- a/src/components/Fondos/Fondos.css
+++ b/src/components/Fondos/Fondos.css
@@ -46,9 +46,11 @@
 }
 .Fondo-interna{
     visibility: hidden;
-    background-color: #1a1a1a;
+    background-image: linear-gradient(to left top , #2b2b2b , #1a1a1a);
     opacity: 0;
-    transition: all 1s ease;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 .isActive{
     opacity: 1;
