--- a/src/App.css
+++ b/src/App.css
@@ -65,7 +65,7 @@ body{
     }
     .Header-nav{
         width: 90%;
-        border-radius: 50px;
+        border-radius: 24px;
         min-height: 0;
     }
 }
@@ -73,12 +73,12 @@ body{
     .Header{
         width: 100%;
         position: fixed;
-        padding: 0 ;
+        padding: 0 1rem  ;
         top: 1rem;
     }
     .Header-nav{
-        width: 90%;
-        border-radius: 50px;
+        width: 100%;
+        border-radius: 24px;
         min-height: 0;
     }
     .Header-ul{
